a few changes here and there