@@ -1,17 +1,11 @@
 description = "Base generator and data model of jpgen"
-version = "0.0.2"
+version = "0.0.3"
 
 dependencies {
     implementation(project(":jpgen-api"))
     implementation(project(":jpgen-clangc"))
 
     compileOnly("org.jspecify:jspecify:1.0.0")
-}
-
-tasks.withType<JavaExec> {
-    jvmArgs(
-        "--enable-native-access=ALL-UNNAMED"
-    )
 }
 
 deployer.projectInfo {
